--- a/Source/KyRator/KyRator.Data/KyRator.Data.csproj
+++ b/Source/KyRator/KyRator.Data/KyRator.Data.csproj
@@ -6,8 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repositories\Interfaces\" />
-    <Folder Include="Repositories\Implementations\" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.5" />
   </ItemGroup>
 
 </Project>
