--- a/Source/KyRator/KyRator.Core/KyRator.Core.csproj
+++ b/Source/KyRator/KyRator.Core/KyRator.Core.csproj
@@ -8,4 +8,9 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\KyRator.Data\KyRator.Data.csproj" />
+    </ItemGroup>
+
 </Project>
