--- a/Source/KyRator/KyRator.BotCommands/KyRator.BotCommands.csproj
+++ b/Source/KyRator/KyRator.BotCommands/KyRator.BotCommands.csproj
@@ -1,16 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\BotFramework\Kysect.BotFramework\Kysect.BotFramework.csproj" />
       <ProjectReference Include="..\KyRator.Core\KyRator.Core.csproj" />
       <ProjectReference Include="..\KyRator.Data\KyRator.Data.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <PackageReference Include="Kysect.BotFramework" Version="0.1.2" />
     </ItemGroup>
 
 </Project>
