--- a/Source/KyRator/KyRator.Launch/KyRator.Launch.csproj
+++ b/Source/KyRator/KyRator.Launch/KyRator.Launch.csproj
@@ -6,10 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Kysect.BotFramework" Version="0.1.2" />
-    </ItemGroup>
-
-    <ItemGroup>
+      <ProjectReference Include="..\..\..\BotFramework\Kysect.BotFramework\Kysect.BotFramework.csproj" />
       <ProjectReference Include="..\KyRator.BotCommands\KyRator.BotCommands.csproj" />
       <ProjectReference Include="..\KyRator.Core\KyRator.Core.csproj" />
     </ItemGroup>
